# rag_building_documentation

./: .env.example  .gitignore  README.md  docker-compose.yml  preprocess_and_test_Llava.ipynb  test_img_to_table.ipynb
answer_generation/: Dockerfile  main.py  prompts.py  pyproject.toml
database/: Dockerfile  main.py  pyproject.toml  utils.py
tg_bot/: Dockerfile  main.py  pyproject.toml
